
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__* b_p_inde; scalar_t__ b_p_cin; } ;


 scalar_t__ NUL ;
 TYPE_1__* curbuf ;
 int p_paste ;

__attribute__((used)) static int
cindent_on()
{
    return (!p_paste && (curbuf->b_p_cin



      ));
}
